# CG-Group-1

./: .gitignore  CMakeLists.txt  README.md  RayTracing.cpp  RayTracing.kdev4  RayTracing.sln  RayTracing.vcxproj  RayTracing.vcxproj.filters  ReadMe.txt  blenderassignment.blend  box.h  imageWriter.h  main.cpp  mesh.cpp  raytracing.h  result.ppm  stdafx.cpp  traqueboule.h
Debug/: RayTracing.pch  vc120.idb
Debug/RayTracing.tlog/: CL.read.1.tlog  CL.write.1.tlog  RayTracing.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: RayTracing.pch
Release/RayTracing.tlog/: CL.read.1.tlog  CL.write.1.tlog  RayTracing.lastbuildstate  RayTracing.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
enc_temp_folder/63d0a05a11e795932ab3db5efd1c/: RayTracing.cpp
enc_temp_folder/8cfcce5a9929330cd13d11fbbccd7b2/: RayTracing.cpp
